--- a/currencySpirit/build.gradle
+++ b/currencySpirit/build.gradle
@@ -15,6 +15,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        //信鸽推送
+        ndk {
+            //根据需要 自行选择添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+        }
+        manifestPlaceholders = [
+                XG_ACCESS_ID:"2100265989",
+                XG_ACCESS_KEY : "A8LBIX2827JL",
+        ]
     }
     buildTypes {
         release {
@@ -43,4 +54,11 @@ dependencies {
     //    compile 'com.android.support:recyclerview-v7:25.3.1'
     //    compile 'homhomlin.lib:ptrrv-library:1.3.1'// pull upload
     compile project(':PullToRefreshRecyclerView')
+
+    //信鸽稳定版
+    compile 'com.tencent.xinge:xinge:3.1.81-alpha'
+    //wup包 如果和其他腾讯系的sdk 发生wup冲突，这个依赖可不添加
+    compile 'com.tencent.wup:wup:1.0.0.E-alpha'
+    //mid包
+    compile 'com.tencent.mid:mid:3.72.4-alpha'
 }
