--- a/currencySpirit/src/main/AndroidManifest.xml
+++ b/currencySpirit/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.eshel.currencyspirit">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk tools:overrideLibrary="com.lc.xinge,lc.com.wup,com.qq.mid"/>
     <application
         android:name=".CurrencySpiritApp"
         android:allowBackup="true"
@@ -17,7 +19,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.HomeActivity"/>
+            android:name=".activity.HomeActivity"
+            android:launchMode="singleTop"/>
+        <!--信鸽推送-->
+        <receiver android:name=".receiver.XGMessageReceiver"
+                  android:exported="true" >
+            <intent-filter>
+                <!-- 接收消息透传 -->
+                <action android:name="com.tencent.android.tpush.action.PUSH_MESSAGE" />
+                <!-- 监听注册、反注册、设置/删除标签、通知被点击等处理结果 -->
+                <action android:name="com.tencent.android.tpush.action.FEEDBACK" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
