--- a/currencySpirit/build.gradle
+++ b/currencySpirit/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     //    compile 'com.android.support:recyclerview-v7:25.3.1'
     //    compile 'homhomlin.lib:ptrrv-library:1.3.1'// pull upload
     compile project(':PullToRefreshRecyclerView')
+//    compile 'me.weyye.hipermission:library:1.0.7'
 
     //信鸽稳定版
     compile 'com.tencent.xinge:xinge:3.1.81-alpha'
