加入数据库框架, 加入精选页面详情以及缓存机制

--- a/currencySpirit/src/main/AndroidManifest.xml
+++ b/currencySpirit/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".activity.HomeActivity"
             android:launchMode="singleTop"/>
+        <activity android:name=".activity.EssenceDetailsActivity"/>
         <!--信鸽推送-->
         <receiver android:name=".receiver.XGMessageReceiver"
                   android:exported="true" >
