--- a/currencySpirit/src/main/AndroidManifest.xml
+++ b/currencySpirit/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.eshel.currencyspirit">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-sdk tools:overrideLibrary="com.lc.xinge,
@@ -16,20 +17,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.SplashActivity"
-            android:theme="@style/TranslucentTheme">
+                  android:theme="@style/TranslucentTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <!--android:launchMode="singleTop"-->
         <activity
-            android:name=".activity.HomeActivity"
-            android:launchMode="singleTop"/>
+            android:name=".activity.HomeActivity"/>
         <activity android:name=".activity.EssenceDetailsActivity"/>
         <activity android:name=".activity.EssenceHistoryActivity"/>
         <activity android:name=".activity.WeiboDetailsActivity"/>
         <!--信鸽推送-->
-        <receiver android:name=".receiver.XGMessageReceiver"
+        <receiver android:name="xgpush.receiver.XGMessageReceiver"
                   android:exported="true" >
             <intent-filter>
                 <!-- 接收消息透传 -->
